[tool.poetry]
name = "midicleanerapi"
version = "0.1.0"
description = ""
authors = ["Dennis Vink <pixelatedpoets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
gunicorn = "^21.2.0"
mido = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
